force-app/main/default/objects/OTP__c/OTP__c.object-meta.xml
<CustomObject>
    <label>OTP Verification</label>
    <nameField>
        <label>OTP Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>OTP Verifications</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>