force-app/main/default/objects/OTP__c/fields/Email__c.field-meta.xml
<CustomField>
    <fullName>Email__c</fullName>
    <externalId>true</externalId>
    <label>Email</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>