force-app/main/default/objects/OTP__c/fields/Generated_OTP__c.field-meta.xml
<CustomField>
    <fullName>Generated_OTP__c</fullName>
    <label>Generated OTP</label>
    <length>6</length>
    <type>Text</type>
</CustomField>